--- a/etc/nomad.conf
+++ b/etc/nomad.conf
@@ -1,4 +1,4 @@
-# nomad agent -config=etc/nomad.conf -data-dir=/tmp/nomad  -dc=grove -region=spiral -node=grove-0 -bootstrap-expect 1
+# nomad agent -config=etc/nomad.conf -data-dir=/tmp/nomad  -dc=grove -region=spiral -node=grove-0 -bootstrap-expect 1 -bind 100.115.182.58
 # nomad job run -address http://100.115.182.58:4646 etc/raw_exec.nomad
 # nomad job run -address http://100.115.182.58:4646 etc/docker.nomad
 
