clients specify everything on cli

--- a/etc/nomad-client.conf
+++ b/etc/nomad-client.conf
@@ -1,8 +1,4 @@
-# nomad agent -config=etc/nomad-client.conf -data-dir=/tmp/nomad  -dc=grove -region=spiral -node=so
+# nomad agent -client -data-dir=/tmp/nomad -dc=macos -region=spiral -node=immanent -bind 100.121.162.1 -consul-client-auto-join=false -servers grove-0:4647
 client {
   enabled = true
-
-  server_join {
-    retry_join = ["grove-0:4647"]
-  }
 }
