fix step version

--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ SHELLCHECK=0.8.0
 SHFMT=3.5.1
 SKAFFOLD=1.39.2
 STEAMPIPE=0.16.0
-222222222.0
+STEP=0.22.0
 SWITCH=0.7.1
 TERRAFORM=1.2.8
 TILT=0.30.7
