--- a/.vscode-server/data/Machine/settings.json
+++ b/.vscode-server/data/Machine/settings.json
@@ -1,4 +1,5 @@
 {
   "remote.SSH.defaultExtensions": [],
-  "remote.SSH.allowLocalServerDownload": "false"
+  "remote.SSH.allowLocalServerDownload": "false",
+  "python.languageServer": "Pylance"
 }
