Revert "load pylance"
This reverts commit 95b621ac7519a113800f7ab9c6c2159b43facb01.

--- a/.vscode-server/data/Machine/settings.json
+++ b/.vscode-server/data/Machine/settings.json
@@ -1,5 +1,4 @@
 {
   "remote.SSH.defaultExtensions": [],
-  "remote.SSH.allowLocalServerDownload": "false",
-  "python.languageServer": "Pylance"
+  "remote.SSH.allowLocalServerDownload": "false"
 }
