--- a/Makefile.common
+++ b/Makefile.common
@@ -13,6 +13,10 @@ app ?= $(shell pwd)/app
 
 dummy_ip ?= 169.254.32.1
 
+DEFN_DEV_HOST      ?= "k3d-$(name).${domain}"
+DEFN_DEV_HOST_API  ?= "$${DEFN_DEV_HOST_API:-127.0.0.1}"
+DEFN_DEV_HOST_PORT ?= "$${DEFN_DEV_HOST_PORT:-6443}"
+
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
 
@@ -160,7 +164,7 @@ join-inner:
 
 cluster-inner:
 	-k3d cluster delete $(name)
-	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 $(shell if test -z "$${DEFN_DEV_HEADLESS:-}"; then -p "80:8000@server:0" -p "443:8443@server:0"; fi)
+	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0
 	docker update --restart=no $(context)-server-0
 	-cd $(app)/tf/$(name) && make init plan apply
 
@@ -270,10 +274,10 @@ debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
 
 immanent:
-	env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$(shell pwd)/app
+	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal $(MAKE) this name=immanent
 
 grove:
-	$(MAKE) this name=grove app=$(shell pwd)/app
+	env DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=127.0.0.1 $(MAKE) this name=grove
 	
 this:
 	git pull
@@ -287,16 +291,13 @@ this:
 	(cd tmp/$(name) && pass tailscale_k3d-$(name) | base64 -d | tar xvf -)
 	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64 | xargs | sed 's# ##g')" \
-		DEFN_DEV_HOST=k3d-$(name).${domain} \
-		DEFN_DEV_HOST_API="$${DEFN_DEV_HOST_API:-127.0.0.1}" \
-		DEFN_DEV_HOST_PORT="$${DEFN_DEV_HOST_PORT:-6443}" \
 		$(MAKE) cluster name=$(name)
 	docker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
 	if test -n "$(DEFN_DEV_HEADLESS)"; then argocd cluster add --yes --upsert k3d-$(name); pod apply -f $(app)/e/k3d-$(name).yaml; fi
 	if test -z "$(DEFN_DEV_HEADLESS)"; then \
 		if kubectl rollout -n default status statefulset $(name) --watch; then \
 			rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
-			rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete; \
+			rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete --exclude .terraform; \
 		fi; \
 		kubectl rollout -n argocd status deployment argocd-server --watch; \
 	fi
