--- a/Makefile.common
+++ b/Makefile.common
@@ -54,6 +54,10 @@ perms:
 	-chmod 0700 ~/.gnupg/. ~/.gnupg2/. ~/.password-store/home/.gnupg
 	-chmod 0600 ~/.kube/config
 
+install:
+	$(MAKE) init
+	$(MAKE) install-site
+
 init:
 	$(MAKE) symlinks perms
 
@@ -269,7 +273,7 @@ cert:
 
 provision-digital-ocean:
 	echo k3d 5.4.4 >> .tool-versions
-	bin/e asdf install nk3d
+	bin/e asdf install k3d
 	bin/e make cluster
 
 debug-host:
