--- a/.env
+++ b/.env
@@ -51,6 +51,8 @@ SKAFFOLD=1.39.2
 STEAMPIPE=0.16.1
 STEP=0.22.0
 SWITCH=0.7.1
+TEMPORAL=1.17.4
+TEMPORALITE=0.1.1
 TERRAFORM=1.2.8
 TILT=0.30.7
 VAULT=1.11.3
