--- a/Makefile.common
+++ b/Makefile.common
@@ -251,9 +251,6 @@ test:
 	pass hello
 	earthly --allow-privileged --remote-cache=$(cache)defn/cache:updates-images --no-output +test --repo=$${repo:-quay.io/}
 
-local:
-	$(MAKE) images repo=localhost:5000/
-
 images:
 	pass hello
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then git pull; git push; if ! test -d work/dev/.; then git clone https://github.com/defn/dev work/dev; fi; cd work/dev && git pull && $(MAKE) $@; else repo=$(repo); earthly --remote-cache=$(cache)defn/cache:updates-$@ --no-output $(push) +images --repo=$${repo:-quay.io/}; fi
@@ -261,6 +258,9 @@ images:
 amd arm:
 	pass hello
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then git pull; git push; cd work/dev && git pull && $(MAKE) $@; else repo=$(repo) earthly --cache-from=$(cache)defn/cache:updates-images --remote-cache=$(cache)defn/cache:updates-$@ --no-output $(push) +"$@" --repo=$${repo:-}; fi
+
+local:
+	if [[ "$(shell pwd)" == "$(HOME)" ]]; then git pull; git push; if ! test -d work/dev/.; then git clone https://github.com/defn/dev work/dev; fi; cd work/dev && git pull && $(MAKE) $@; else earthly --cache-from=$(cache)defn/cache:updates-images --no-output --no-push +images --repo=localhost:5000/; fi
 
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
