make registry configures tilt registry

--- a/Makefile.common
+++ b/Makefile.common
@@ -288,7 +288,7 @@ immanent:
 grove:
 	$(MAKE) macos
 	env DEFN_DEV_MACOS=1 DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=127.0.0.1 $(MAKE) this name=grove
-	
+
 this:
 	git pull
 	cd app && git pull
@@ -313,4 +313,5 @@ this:
 	fi
 
 registry:
-	k3d registry create registry --port 0.0.0.0:5000
+	-k3d registry create registry --port 0.0.0.0:5000
+	pod apply -f etc/local-registry-hosting.yaml
