generalize global, control plane names

--- a/.vscode-server/data/Machine/settings.json
+++ b/.vscode-server/data/Machine/settings.json
@@ -2,6 +2,7 @@
   "remote.SSH.defaultExtensions": [],
   "remote.SSH.allowLocalServerDownload": "false",
   "python.terminal.activateEnvInCurrentTerminal": true,
+  "terminal.integrated.localEchoEnabled": "off",
   "python.venvFolders": [
     ".venv"
   ],
