--- a/Makefile.common
+++ b/Makefile.common
@@ -312,3 +312,10 @@ this:
 registry:
 	-k3d registry create registry --port 0.0.0.0:5000
 	pod apply -f etc/local-registry-hosting.yaml
+
+global: # Provision global server from control plane
+	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal $(MAKE) this name=$@
+
+control: # Provision control plane from macOS
+	$(MAKE) macos
+	env DEFN_DEV_MACOS=1 DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=127.0.0.1 $(MAKE) this name=$@
