--- a/Makefile.common
+++ b/Makefile.common
@@ -311,7 +311,7 @@ this:
 
 registry:
 	-k3d registry create registry --port 0.0.0.0:5000
-	pod apply -f etc/local-registry-hosting.yaml
+	#pod apply -f etc/local-registry-hosting.yaml
 
 global: # Provision global server from control plane
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal $(MAKE) this name=$@
