--- a/Makefile.common
+++ b/Makefile.common
@@ -143,8 +143,12 @@ vclusterconfig:
 		fi
 
 pending: # Generate pending version updates
+	$(MAKE) pending-images
 	$(MAKE) pending-gh
 	$(MAKE) pending-asdf
+
+pending-images:
+	pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | sort -u | grep -v :5000/ > .image-versions.txt
 
 pending-asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
