--- a/Makefile.common
+++ b/Makefile.common
@@ -150,6 +150,9 @@ pending: # Generate pending version updates
 pending-images:
 	pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | sort -u | grep -v :5000/ > .image-versions.txt
 
+sync-images:
+	for a in $$(cat .image-versions.txt); do skopeo copy docker://$$a docker://127.0.0.1:5000/$${a#*/} --multi-arch all --dest-tls-verify=false; done
+
 pending-asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
 
