--- a/Makefile.common
+++ b/Makefile.common
@@ -78,7 +78,7 @@ init:
 	$(MAKE) init-site
 
 tilt:
-	env tilt up --context pod --port $(tilt_port) --host "$(shell tailscale ip -4)"
+	env tilt up --context pod --port $(tilt_port) --host 127.0.0.1
 
 logout:
 	-echo yes | gh auth logout --hostname github.com
