--- a/.env
+++ b/.env
@@ -4,19 +4,19 @@ ASDF=0.10.2
 ASDFX=0.10.2
 AWSCLI=2.7.13
 AWSVAULT=6.6.0
-BUF=1.7.0
+BUF=1.8.0
 CADDY=2.5.2
 CDKTF=0.12.0
 CILIUM=0.12.1
 CLOUDFLARED=2022.9.0
 CODESERVER=4.7.0
-COSIGN=1.11.1
-CREDENTIALPASS=0.6.4
+COSIGN=1.12.0
+CREDENTIALPASS=0.7.0-beta.2
 CUE=0.4.3
 DIFFT=0.33.0
 DOCTL=1.79.0
 EARTHLY=0.6.23
-FLYCTL=0.0.389
+FLYCTL=0.0.390
 FULCIO=0.5.3
 GH=2.15.0
 GOLANG=1.19.1
@@ -30,7 +30,7 @@ K3SUP=0.12.0
 K9S=0.26.3
 KN=1.7.0
 KREW=0.4.3
-KUBECTL=1.24.4
+KUBECTL=1.24.5
 KUMA=1.7.1
 KUSTOMIZE=4.5.7
 LITESTREAM=0.3.9
@@ -54,7 +54,7 @@ STEP=0.22.0
 SWITCH=0.7.1
 TEMPORAL=1.17.4
 TEMPORALITE=0.1.1
-TERRAFORM=1.2.9
+TERRAFORM=1.3.0-rc1
 TILT=0.30.7
 VAULT=1.11.3
 VCLUSTER=0.11.2
