--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ CILIUM=0.12.1
 CLOUDFLARED=2022.9.0
 CODESERVER=4.7.0
 COSIGN=1.12.0
-CREDENTIALPASS=0.7.0-beta.2
+CREDENTIALPASS=0.6.4
 CUE=0.4.3
 DIFFT=0.33.0
 DOCTL=1.79.0
