--- a/Makefile.common
+++ b/Makefile.common
@@ -334,11 +334,13 @@ pull-repos: # Pull dev, app, home, and password-store repos
 global: # Provision global server from control plane
 	$(MAKE) pull-repos
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal \
+		DEFN_DEV_NAME=$@ \
 		$(MAKE) this name=$@
 
 control: # Provision control plane from macOS
 	$(MAKE) pull-repos
 	$(MAKE) macos
 	env DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=127.0.0.1 \
+		DEFN_DEV_NAME=$@ \
 		DEFN_DEV_MACOS=1 \
 		$(MAKE) this name=$@
