--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -2,7 +2,7 @@ build:
 	wget -O- https://pkgs.tailscale.com/stable/tailscale_1.30.0_amd64.tgz | tar xvfz -
 	if test -d $(app)/bootstrap/$(name); then kustomize build --enable-helm $(app)/bootstrap/$(name) > defn-dev-bootstrap.yaml; else echo > defn-dev-bootstrap.yaml; fi
 	if test -d $(app)/bootstrap/$(name); then cp $(app)/e/$(name).yaml defn-dev-argocd-appset.yaml; fi
-	docker build -t defn.dev/defn/k3d --build-arg DEFN_DEV_ARCHIVE="${DEFN_DEV_ARCHIVE}" .
+	docker build -t defn.dev/defn/k3d:$(app) --build-arg DEFN_DEV_ARCHIVE="${DEFN_DEV_ARCHIVE}" .
 
 mint:
 	docker run --rm -ti --privileged --entrypoint sh quay.io/defn/dev -c \
