--- a/Makefile.common
+++ b/Makefile.common
@@ -186,7 +186,12 @@ join-inner:
 
 cluster-inner:
 	-k3d cluster delete $(name)
-	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 --registry-config etc/registries.yaml
+	k3d cluster create $(name) \
+		--k3s-node-label env=$(name)@server:0 \
+		--config k3d.yaml \
+		--registry-config etc/registries.yaml \
+		-p 443:443@server:0 \
+		-p 80:80@server:0
 	docker update --restart=no $(context)-server-0
 	-cd $(app)/tf/$(name) && make init plan apply
 
