--- a/Makefile.common
+++ b/Makefile.common
@@ -317,11 +317,13 @@ this:
 	docker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
 	if test -z "$(DEFN_DEV_MACOS)"; then argocd cluster add --yes --upsert k3d-$(name); pod apply -f $(app)/e/k3d-$(name).yaml; fi
 	if test -n "$(DEFN_DEV_MACOS)"; then \
+		kubectl rollout -n argocd status deployment argocd-server --watch; \
 		if kubectl rollout -n default status statefulset $(name) --watch; then \
 			rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
 			rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete --exclude .terraform; \
+			echo rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
+			echo rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete --exclude .terraform; \
 		fi; \
-		kubectl rollout -n argocd status deployment argocd-server --watch; \
 	fi
 
 registry:
