--- a/Makefile.common
+++ b/Makefile.common
@@ -319,10 +319,8 @@ this:
 	if test -n "$(DEFN_DEV_MACOS)"; then \
 		kubectl rollout -n argocd status deployment argocd-server --watch; \
 		if kubectl rollout -n default status statefulset $(name) --watch; then \
-			rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
-			rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete --exclude .terraform; \
-			echo rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
-			echo rsync -ia $(app)/ ubuntu@$(name)-0:/work/app --progress --delete --exclude .terraform; \
+			oras push localhost:5000/defn/bootstrap:k3d-$(name)-password-store ~/.password-store/.git:+tar; \
+			oras push localhost:5000/defn/bootstrap:k3d-$(name)-app work/dev/app/.git:+tar; \
 		fi; \
 	fi
 
