initialize password-store, app with oras

--- a/Makefile.common
+++ b/Makefile.common
@@ -37,10 +37,9 @@ macos:
 
 symlinks:
 	mark -- configure symlinks
-	if test -d /work; then sudo install -d -m 0700 -o ubuntu -g ubuntu /work; ln -nfs /work .; fi
-	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
-	if ! test -d work/.; then mkdir -p work; fi
-	if ! test -d app/.; then if test -d work/app/.; then ln -nfs work/app .; fi; fi
+	sudo install -d -m 0700 -o ubuntu -g ubuntu /work
+	ln -nfs /work .
+	ln -nfs work/app .
 
 perms:
 	mark -- configure permissions
@@ -63,7 +62,10 @@ init:
 	$(MAKE) symlinks perms
 
 	mark -- configure password-store
-	cd ~/.password-store && git pull
+	mkdir -p ~/work/password-store
+	cd ~/.password-store && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:k3d-password-store && git reset --hard
+	mkdir -p ~/work/app
+	cd ~/work/app && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:k3d-app && git reset --hard
 
 	mark -- configure gpg
 	$(MAKE) perms
