build a base k3d image with defn/dev

--- a/d/k3d/Dockerfile
+++ b/d/k3d/Dockerfile
@@ -1,19 +1,7 @@
-FROM rancher/k3s:v1.23.10-k3s1
+ARG DEFN_DEV_FROM
+
+FROM ${DEFN_DEV_FROM}
 
 ARG DEFN_DEV_ARCHIVE
 
-RUN echo root:x:0:0:root:/root:/bin/sh >> /etc/passwd
-RUN echo root:x:0: >> /etc/group
-RUN install -d -m 0700 -o root -g root /root
-
-RUN mv /bin/k3s /bin/k3s-real
-
-RUN for a in /bin/kubectl /bin/k3s-server /bin/k3s-secrets-encrypt /bin/k3s-etcd-snapshot /bin/k3s-completion /bin/k3s-certificate /bin/k3s-agent /bin/crictl /bin/ctr; do ln -nfs k3s-real $a; done
-
-COPY k3s-wrapper.sh /bin/k3s
-
-COPY */tailscale */tailscaled ./
-
-COPY *.yaml /var/lib/rancher/k3s/server/manifests/
-
-RUN cd / && echo "${DEFN_DEV_ARCHIVE}" | base64 -d | tar xvf -
+RUN cd / && if test -n "${DEFN_DEV_ARCHIVE}"; then echo "${DEFN_DEV_ARCHIVE}" | base64 -d | tar xvf -; fi
