--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -1,10 +1,10 @@
 tailscale_version ?= 1.30.0_amd64
 
 DEFN_DEV_FROM ?= 169.254.32.1:5000/defn/k3d:base
-DEFN_DEV_IMAGE ?= 169.254.32.1:5000/defn/dev:latest
+DEFN_DEV_IMAGE ?= 169.254.32.1:5000/defn/dev:latest@sha256:3ded588bad716c9bfc07b0ebf0d5065272662c2ca8ea9756268c64f4dc3124a3
 
 base: tailscale_$(tailscale_version)/tailscaled
-	docker build --no-cache -t "$(DEFN_DEV_FROM)"  --build-arg DEFN_DEV_IMAGE="${DEFN_DEV_IMAGE}" -f Dockerfile.base .
+	docker build --no-cache -t "$(DEFN_DEV_FROM)" --build-arg DEFN_DEV_IMAGE="${DEFN_DEV_IMAGE}" -f Dockerfile.base .
 
 build:
 	if test -d $(app)/bootstrap/$(name); then kustomize build --enable-helm $(app)/bootstrap/$(name) > defn-dev-bootstrap.yaml; else echo > defn-dev-bootstrap.yaml; fi
@@ -18,7 +18,7 @@ mint:
 	docker run --rm -ti --privileged --entrypoint sh quay.io/defn/dev -c \
 		"sudo mkdir -p /var/lib/tailscale; \
 		sudo /usr/sbin/tailscaled -statedir /var/lib/tailscale & \
-		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
+		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key)); \
 		sleep 10; \
 		while true; do if sudo test -f /var/lib/tailscale/tailscaled.state; then domain=\`tailscale cert 2>&1 | grep ' use ' | cut -d'\"' -f2\`; sudo tailscale cert \$$domain; sudo tar cf - /var/lib/tailscale/tailscaled.state /var/lib/tailscale/certs | base64 -w 0; break; fi; sleep 1; done;" | tail -1 | pass insert -e -f tailscale_$(name)
 
@@ -26,6 +26,6 @@ min:
 	docker run --rm -ti --privileged --entrypoint sh quay.io/defn/dev -c \
 		"sudo mkdir -p /var/lib/tailscale; \
 		sudo /usr/sbin/tailscaled -statedir /var/lib/tailscale & \
-		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
+		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key)); \
 		sleep 10; \
 		while true; do if sudo test -f /var/lib/tailscale/tailscaled.state; then sudo tar cf - /var/lib/tailscale/tailscaled.state | base64 -w 0; break; fi; sleep 1; done;" | tail -1 | pass insert -e -f tailscale_$(name)
