--- a/Makefile.common
+++ b/Makefile.common
@@ -66,9 +66,9 @@ init:
 
 	mark -- configure password-store
 	mkdir -p ~/work/password-store
-	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git reset --hard
+	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git fetch && git reset --hard
 	mkdir -p ~/work/app
-	cd ~/work/app && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:app && git reset --hard
+	cd ~/work/app && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:app && git fetch && git reset --hard
 
 	mark -- configure gpg
 	$(MAKE) perms
@@ -355,3 +355,4 @@ control: # Provision control plane from macOS
 
 manual:
 	$(MAKE) install-global
+	
