--- a/Caddyfile
+++ b/Caddyfile
@@ -12,11 +12,12 @@ https://control-0.tiger-mamba.ts.net {
 	}
 
 	handle_path /vc3/* {
-		reverse_proxy http://dev-x-default-x-vcluster.vc3
+		reverse_proxy http://localhost:8003
 	}
     
 	handle_path /vc4/* {
-		reverse_proxy http://dev-x-default-x-vcluster.vc4
+		reverse_proxy http://localhost:8004
+	}
 	}
 
 	reverse_proxy http://localhost:10350
