--- a/Makefile.common
+++ b/Makefile.common
@@ -78,7 +78,7 @@ init:
 	mark -- configure repos
 	cd ~/.password-store && git pull
 	mkdir -p ~/work/app
-	cd ~/work/app && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:app && git reset --hard && git pull
+	(set -x; cd ~/work/app && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:app && git fetch && git reset --hard origin/master)
 
 	$(MAKE) login
 
