--- a/Makefile.common
+++ b/Makefile.common
@@ -143,7 +143,7 @@ vc%:
 connect-%:
 	if vcluster connect vcluster --context pod --namespace $(second) --kube-config ~/.kube/$(second) --kube-config-context-name $(second) --update-current=false --server vcluster.$(second).svc.cluster.local; then \
 		set -x; \
-		env KUBECONFIG=~/.kube/co$(second)nfig:~/.kube/$(second) kubectl config view --flatten > ~/.kube/config.$(second); \
+		env KUBECONFIG=~/.kube/config:~/.kube/$(second) kubectl config view --flatten > ~/.kube/config.$(second); \
 		mv ~/.kube/config.$(second) ~/.kube/config; \
 		fi
 
